--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: "3"
 
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports: 
+      - "4200:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+
   node-app:
     build: .
-    ports:
-      - "4200:3000"
+    # ports:
+    #   - "4200:3000"
     environment:
       - PORT=3000
     depends_on:
