--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d --build",
+    "start:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build",
+    "stop": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml down",
+    "up": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d -V",
+    "loadbalance:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d --scale node-app=2",
+    "loadbalance:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d --scale node-app=2"
   },
   "keywords": [
     "Mongo",
@@ -18,6 +24,7 @@
   "dependencies": {
     "argon2": "^0.27.2",
     "connect-redis": "^5.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.11",
